src/Calendar/Calendar/docs/v1.0-beta/Microsoft.Graph.Calendar.md
---
Module Name: Microsoft.Graph.Beta.Calendar
Module Guid: ff68b40e-2298-4ca0-ac1e-88f6d1d6a358
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/Microsoft.Graph.Beta.calendar
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.Beta.Calendar Module
## Description
Microsoft.Graph.Beta PowerShell Cmdlets

## Microsoft.Graph.Beta.Calendar Cmdlets
### [Get-MgBetaGroupCalendar](Get-MgBetaGroupCalendar.md)
The group's calendar.
Read-only.

### [Get-MgBetaGroupCalendarMultiValueExtendedProperty](Get-MgBetaGroupCalendarMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the calendar.
Read-only.
Nullable.

### [Get-MgBetaGroupCalendarPermission](Get-MgBetaGroupCalendarPermission.md)
The permissions of the users with whom the calendar is shared.

### [Get-MgBetaGroupCalendarSingleValueExtendedProperty](Get-MgBetaGroupCalendarSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the calendar.
Read-only.
Nullable.

### [Get-MgBetaGroupCalendarView](Get-MgBetaGroupCalendarView.md)
The calendar view for the calendar.
Navigation property.
Read-only.

### [Get-MgBetaGroupEvent](Get-MgBetaGroupEvent.md)
The group's events.

### [Get-MgBetaGroupEventAttachment](Get-MgBetaGroupEventAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaGroupEventCalendar](Get-MgBetaGroupEventCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaGroupEventExceptionOccurrence](Get-MgBetaGroupEventExceptionOccurrence.md)
Get exceptionOccurrences from groups

### [Get-MgBetaGroupEventExceptionOccurrenceAttachment](Get-MgBetaGroupEventExceptionOccurrenceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceCalendar](Get-MgBetaGroupEventExceptionOccurrenceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaGroupEventExceptionOccurrenceExtension](Get-MgBetaGroupEventExceptionOccurrenceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceInstance](Get-MgBetaGroupEventExceptionOccurrenceInstance.md)
The occurrences of a recurring series, if the event is a series master.
This property includes occurrences that are part of the recurrence pattern, and exceptions that have been modified, but does not include occurrences that have been cancelled from the series.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceInstanceAttachment](Get-MgBetaGroupEventExceptionOccurrenceInstanceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceInstanceCalendar](Get-MgBetaGroupEventExceptionOccurrenceInstanceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaGroupEventExceptionOccurrenceInstanceExtension](Get-MgBetaGroupEventExceptionOccurrenceInstanceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty](Get-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty](Get-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty](Get-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty](Get-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventExtension](Get-MgBetaGroupEventExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaGroupEventInstance](Get-MgBetaGroupEventInstance.md)
The occurrences of a recurring series, if the event is a series master.
This property includes occurrences that are part of the recurrence pattern, and exceptions that have been modified, but does not include occurrences that have been cancelled from the series.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaGroupEventInstanceAttachment](Get-MgBetaGroupEventInstanceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaGroupEventInstanceCalendar](Get-MgBetaGroupEventInstanceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaGroupEventInstanceExceptionOccurrence](Get-MgBetaGroupEventInstanceExceptionOccurrence.md)
Get exceptionOccurrences from groups

### [Get-MgBetaGroupEventInstanceExceptionOccurrenceAttachment](Get-MgBetaGroupEventInstanceExceptionOccurrenceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaGroupEventInstanceExceptionOccurrenceCalendar](Get-MgBetaGroupEventInstanceExceptionOccurrenceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaGroupEventInstanceExceptionOccurrenceExtension](Get-MgBetaGroupEventInstanceExceptionOccurrenceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty](Get-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty](Get-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventInstanceExtension](Get-MgBetaGroupEventInstanceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaGroupEventInstanceMultiValueExtendedProperty](Get-MgBetaGroupEventInstanceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventInstanceSingleValueExtendedProperty](Get-MgBetaGroupEventInstanceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventMultiValueExtendedProperty](Get-MgBetaGroupEventMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaGroupEventSingleValueExtendedProperty](Get-MgBetaGroupEventSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaPlace](Get-MgBetaPlace.md)
Get the properties and relationships of a place object specified by either its ID or email address.
The **place** object can be one of the following types: The **room**, **workspace**, and **roomList** resources are derived from the **place** object.

### [Get-MgBetaUserCalendar](Get-MgBetaUserCalendar.md)
The user's calendars.
Read-only.
Nullable.

### [Get-MgBetaUserCalendarEvent](Get-MgBetaUserCalendarEvent.md)
Retrieve a list of events in a calendar.
The calendar can be one for a user, or the default calendar of a Microsoft 365 group.
The list of events contains single instance meetings and series masters.
To get expanded event instances, you can get the calendar view, or\nget the instances of an event.

### [Get-MgBetaUserCalendarGroup](Get-MgBetaUserCalendarGroup.md)
The user's calendar groups.
Read-only.
Nullable.

### [Get-MgBetaUserCalendarGroupCalendar](Get-MgBetaUserCalendarGroupCalendar.md)
Retrieve a list of calendars belonging to a calendar group.

### [Get-MgBetaUserCalendarMultiValueExtendedProperty](Get-MgBetaUserCalendarMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the calendar.
Read-only.
Nullable.

### [Get-MgBetaUserCalendarPermission](Get-MgBetaUserCalendarPermission.md)
The permissions of the users with whom the calendar is shared.

### [Get-MgBetaUserCalendarSingleValueExtendedProperty](Get-MgBetaUserCalendarSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the calendar.
Read-only.
Nullable.

### [Get-MgBetaUserCalendarView](Get-MgBetaUserCalendarView.md)
The calendar view for the calendar.
Navigation property.
Read-only.

### [Get-MgBetaUserDefaultCalendar](Get-MgBetaUserDefaultCalendar.md)
Get the properties and relationships of a calendar object.
The calendar can be one for a user, \nor the default calendar of a Microsoft 365 group.
There are two scenarios where an app can get another user's calendar:

### [Get-MgBetaUserEvent](Get-MgBetaUserEvent.md)
The user's events.
Default is to show events under the Default Calendar.
Read-only.
Nullable.

### [Get-MgBetaUserEventAttachment](Get-MgBetaUserEventAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserEventCalendar](Get-MgBetaUserEventCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaUserEventExceptionOccurrence](Get-MgBetaUserEventExceptionOccurrence.md)
Get exceptionOccurrences from users

### [Get-MgBetaUserEventExceptionOccurrenceAttachment](Get-MgBetaUserEventExceptionOccurrenceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceCalendar](Get-MgBetaUserEventExceptionOccurrenceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaUserEventExceptionOccurrenceExtension](Get-MgBetaUserEventExceptionOccurrenceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceInstance](Get-MgBetaUserEventExceptionOccurrenceInstance.md)
The occurrences of a recurring series, if the event is a series master.
This property includes occurrences that are part of the recurrence pattern, and exceptions that have been modified, but does not include occurrences that have been cancelled from the series.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceInstanceAttachment](Get-MgBetaUserEventExceptionOccurrenceInstanceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceInstanceCalendar](Get-MgBetaUserEventExceptionOccurrenceInstanceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaUserEventExceptionOccurrenceInstanceExtension](Get-MgBetaUserEventExceptionOccurrenceInstanceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty](Get-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty](Get-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty](Get-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty](Get-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventExtension](Get-MgBetaUserEventExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaUserEventInstance](Get-MgBetaUserEventInstance.md)
The occurrences of a recurring series, if the event is a series master.
This property includes occurrences that are part of the recurrence pattern, and exceptions that have been modified, but does not include occurrences that have been cancelled from the series.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserEventInstanceAttachment](Get-MgBetaUserEventInstanceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserEventInstanceCalendar](Get-MgBetaUserEventInstanceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaUserEventInstanceExceptionOccurrence](Get-MgBetaUserEventInstanceExceptionOccurrence.md)
Get exceptionOccurrences from users

### [Get-MgBetaUserEventInstanceExceptionOccurrenceAttachment](Get-MgBetaUserEventInstanceExceptionOccurrenceAttachment.md)
The collection of FileAttachment, ItemAttachment, and referenceAttachment attachments for the event.
Navigation property.
Read-only.
Nullable.

### [Get-MgBetaUserEventInstanceExceptionOccurrenceCalendar](Get-MgBetaUserEventInstanceExceptionOccurrenceCalendar.md)
The calendar that contains the event.
Navigation property.
Read-only.

### [Get-MgBetaUserEventInstanceExceptionOccurrenceExtension](Get-MgBetaUserEventInstanceExceptionOccurrenceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty](Get-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty](Get-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventInstanceExtension](Get-MgBetaUserEventInstanceExtension.md)
The collection of open extensions defined for the event.
Nullable.

### [Get-MgBetaUserEventInstanceMultiValueExtendedProperty](Get-MgBetaUserEventInstanceMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventInstanceSingleValueExtendedProperty](Get-MgBetaUserEventInstanceSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventMultiValueExtendedProperty](Get-MgBetaUserEventMultiValueExtendedProperty.md)
The collection of multi-value extended properties defined for the event.
Read-only.
Nullable.

### [Get-MgBetaUserEventSingleValueExtendedProperty](Get-MgBetaUserEventSingleValueExtendedProperty.md)
The collection of single-value extended properties defined for the event.
Read-only.
Nullable.

### [New-MgBetaGroupCalendarMultiValueExtendedProperty](New-MgBetaGroupCalendarMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgBetaGroupCalendarPermission](New-MgBetaGroupCalendarPermission.md)
Create a calendarPermission resource to specify the identity and role of the user with whom the specified calendar is being shared or delegated.

### [New-MgBetaGroupCalendarSingleValueExtendedProperty](New-MgBetaGroupCalendarSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgBetaGroupEvent](New-MgBetaGroupEvent.md)
Use this API to create a new event.

### [New-MgBetaGroupEventAttachment](New-MgBetaGroupEventAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaGroupEventExceptionOccurrenceAttachment](New-MgBetaGroupEventExceptionOccurrenceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaGroupEventExceptionOccurrenceExtension](New-MgBetaGroupEventExceptionOccurrenceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaGroupEventExceptionOccurrenceInstanceAttachment](New-MgBetaGroupEventExceptionOccurrenceInstanceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaGroupEventExceptionOccurrenceInstanceExtension](New-MgBetaGroupEventExceptionOccurrenceInstanceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty](New-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty](New-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty](New-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty](New-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgBetaGroupEventExtension](New-MgBetaGroupEventExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaGroupEventInstanceAttachment](New-MgBetaGroupEventInstanceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaGroupEventInstanceExceptionOccurrenceAttachment](New-MgBetaGroupEventInstanceExceptionOccurrenceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaGroupEventInstanceExceptionOccurrenceExtension](New-MgBetaGroupEventInstanceExceptionOccurrenceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty](New-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty](New-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgBetaGroupEventInstanceExtension](New-MgBetaGroupEventInstanceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaGroupEventInstanceMultiValueExtendedProperty](New-MgBetaGroupEventInstanceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgBetaGroupEventInstanceSingleValueExtendedProperty](New-MgBetaGroupEventInstanceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgBetaGroupEventMultiValueExtendedProperty](New-MgBetaGroupEventMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for groups

### [New-MgBetaGroupEventSingleValueExtendedProperty](New-MgBetaGroupEventSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for groups

### [New-MgBetaPlace](New-MgBetaPlace.md)
Add new entity to places

### [New-MgBetaUserCalendar](New-MgBetaUserCalendar.md)
Create a new calendar for a user.

### [New-MgBetaUserCalendarEvent](New-MgBetaUserCalendarEvent.md)
Use this API to create a new event in a calendar.
The calendar can be one for a user, or the default calendar of a Microsoft 365 group.

### [New-MgBetaUserCalendarGroup](New-MgBetaUserCalendarGroup.md)
Use this API to create a new CalendarGroup.

### [New-MgBetaUserCalendarGroupCalendar](New-MgBetaUserCalendarGroupCalendar.md)
Use this API to create a new calendar in a calendar group for a user.

### [New-MgBetaUserCalendarMultiValueExtendedProperty](New-MgBetaUserCalendarMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserCalendarPermission](New-MgBetaUserCalendarPermission.md)
Create a calendarPermission resource to specify the identity and role of the user with whom the specified calendar is being shared or delegated.

### [New-MgBetaUserCalendarSingleValueExtendedProperty](New-MgBetaUserCalendarSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserEvent](New-MgBetaUserEvent.md)
Create an event in the user's default calendar or specified calendar.
By default, the **allowNewTimeProposals** property is set to true when an event is created, which means invitees can propose a different date/time for the event.
See Propose new meeting times for more information on how to propose a time, and how to receive and accept a new time proposal.
You can specify the time zone for each of the start and end times of the event as part of their values, because the \n**start** and **end** properties are of dateTimeTimeZone type.
First find the supported time zones to make sure you set only time zones that have been configured for the user's mailbox server.
When an event is sent, the server sends invitations to all the attendees.
**Setting the location in an event** An Exchange administrator can set up a mailbox and an email address for a resource such as a meeting room, or equipment\nlike a projector.
Users can then invite the resource as an attendee to a meeting.
On behalf of the resource, the server accepts or rejects\nthe meeting request based on the free/busy schedule of the resource.\nIf the server accepts a meeting for the resource, it creates an event for the meeting in the resource's calendar.
If the meeting is rescheduled,\nthe server automatically updates the event in the resource's calendar.
Another advantage of setting up a mailbox for a resource is to control scheduling of the resource, for example, only executives\nor their delegates can book a private meeting room.
If you're organizing an event that involves a meeting location: Additionally, if the meeting location has been set up as a resource, or if the event involves some equipment that has been set up as a resource:

### [New-MgBetaUserEventAttachment](New-MgBetaUserEventAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaUserEventExceptionOccurrenceAttachment](New-MgBetaUserEventExceptionOccurrenceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaUserEventExceptionOccurrenceExtension](New-MgBetaUserEventExceptionOccurrenceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaUserEventExceptionOccurrenceInstanceAttachment](New-MgBetaUserEventExceptionOccurrenceInstanceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaUserEventExceptionOccurrenceInstanceExtension](New-MgBetaUserEventExceptionOccurrenceInstanceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty](New-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty](New-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty](New-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty](New-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserEventExtension](New-MgBetaUserEventExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaUserEventInstanceAttachment](New-MgBetaUserEventInstanceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaUserEventInstanceExceptionOccurrenceAttachment](New-MgBetaUserEventInstanceExceptionOccurrenceAttachment.md)
Use this API to add an attachment to an existing event.
This operation limits the size of the attachment you can add to under 3 MB.
If an organizer adds an attachment to a meeting event, the organizer can subsequently update the event to send the attachment and update the event for each attendee as well.

### [New-MgBetaUserEventInstanceExceptionOccurrenceExtension](New-MgBetaUserEventInstanceExceptionOccurrenceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty](New-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty](New-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserEventInstanceExtension](New-MgBetaUserEventInstanceExtension.md)
Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource.
You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources.
See known limitations of open extensions for more information.
The table in the Permissions section lists the resources that support open extensions.

### [New-MgBetaUserEventInstanceMultiValueExtendedProperty](New-MgBetaUserEventInstanceMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserEventInstanceSingleValueExtendedProperty](New-MgBetaUserEventInstanceSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [New-MgBetaUserEventMultiValueExtendedProperty](New-MgBetaUserEventMultiValueExtendedProperty.md)
Create new navigation property to multiValueExtendedProperties for users

### [New-MgBetaUserEventSingleValueExtendedProperty](New-MgBetaUserEventSingleValueExtendedProperty.md)
Create new navigation property to singleValueExtendedProperties for users

### [Remove-MgBetaGroupCalendarMultiValueExtendedProperty](Remove-MgBetaGroupCalendarMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for groups

### [Remove-MgBetaGroupCalendarPermission](Remove-MgBetaGroupCalendarPermission.md)
Delete navigation property calendarPermissions for groups

### [Remove-MgBetaGroupCalendarSingleValueExtendedProperty](Remove-MgBetaGroupCalendarSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for groups

### [Remove-MgBetaGroupEvent](Remove-MgBetaGroupEvent.md)
Delete navigation property events for groups

### [Remove-MgBetaGroupEventAttachment](Remove-MgBetaGroupEventAttachment.md)
Delete navigation property attachments for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceAttachment](Remove-MgBetaGroupEventExceptionOccurrenceAttachment.md)
Delete navigation property attachments for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceExtension](Remove-MgBetaGroupEventExceptionOccurrenceExtension.md)
Delete navigation property extensions for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceInstanceAttachment](Remove-MgBetaGroupEventExceptionOccurrenceInstanceAttachment.md)
Delete navigation property attachments for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceInstanceExtension](Remove-MgBetaGroupEventExceptionOccurrenceInstanceExtension.md)
Delete navigation property extensions for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty](Remove-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty](Remove-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty](Remove-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for groups

### [Remove-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty](Remove-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for groups

### [Remove-MgBetaGroupEventExtension](Remove-MgBetaGroupEventExtension.md)
Delete navigation property extensions for groups

### [Remove-MgBetaGroupEventInstanceAttachment](Remove-MgBetaGroupEventInstanceAttachment.md)
Delete navigation property attachments for groups

### [Remove-MgBetaGroupEventInstanceExceptionOccurrenceAttachment](Remove-MgBetaGroupEventInstanceExceptionOccurrenceAttachment.md)
Delete navigation property attachments for groups

### [Remove-MgBetaGroupEventInstanceExceptionOccurrenceExtension](Remove-MgBetaGroupEventInstanceExceptionOccurrenceExtension.md)
Delete navigation property extensions for groups

### [Remove-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty](Remove-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for groups

### [Remove-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty](Remove-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for groups

### [Remove-MgBetaGroupEventInstanceExtension](Remove-MgBetaGroupEventInstanceExtension.md)
Delete navigation property extensions for groups

### [Remove-MgBetaGroupEventInstanceMultiValueExtendedProperty](Remove-MgBetaGroupEventInstanceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for groups

### [Remove-MgBetaGroupEventInstanceSingleValueExtendedProperty](Remove-MgBetaGroupEventInstanceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for groups

### [Remove-MgBetaGroupEventMultiValueExtendedProperty](Remove-MgBetaGroupEventMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for groups

### [Remove-MgBetaGroupEventSingleValueExtendedProperty](Remove-MgBetaGroupEventSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for groups

### [Remove-MgBetaPlace](Remove-MgBetaPlace.md)
Delete entity from places

### [Remove-MgBetaUserCalendar](Remove-MgBetaUserCalendar.md)
Delete navigation property calendars for users

### [Remove-MgBetaUserCalendarGroup](Remove-MgBetaUserCalendarGroup.md)
Delete navigation property calendarGroups for users

### [Remove-MgBetaUserCalendarMultiValueExtendedProperty](Remove-MgBetaUserCalendarMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserCalendarPermission](Remove-MgBetaUserCalendarPermission.md)
Delete navigation property calendarPermissions for users

### [Remove-MgBetaUserCalendarSingleValueExtendedProperty](Remove-MgBetaUserCalendarSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserEvent](Remove-MgBetaUserEvent.md)
Delete navigation property events for users

### [Remove-MgBetaUserEventAttachment](Remove-MgBetaUserEventAttachment.md)
Delete navigation property attachments for users

### [Remove-MgBetaUserEventExceptionOccurrenceAttachment](Remove-MgBetaUserEventExceptionOccurrenceAttachment.md)
Delete navigation property attachments for users

### [Remove-MgBetaUserEventExceptionOccurrenceExtension](Remove-MgBetaUserEventExceptionOccurrenceExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserEventExceptionOccurrenceInstanceAttachment](Remove-MgBetaUserEventExceptionOccurrenceInstanceAttachment.md)
Delete navigation property attachments for users

### [Remove-MgBetaUserEventExceptionOccurrenceInstanceExtension](Remove-MgBetaUserEventExceptionOccurrenceInstanceExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty](Remove-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty](Remove-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty](Remove-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty](Remove-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserEventExtension](Remove-MgBetaUserEventExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserEventInstanceAttachment](Remove-MgBetaUserEventInstanceAttachment.md)
Delete navigation property attachments for users

### [Remove-MgBetaUserEventInstanceExceptionOccurrenceAttachment](Remove-MgBetaUserEventInstanceExceptionOccurrenceAttachment.md)
Delete navigation property attachments for users

### [Remove-MgBetaUserEventInstanceExceptionOccurrenceExtension](Remove-MgBetaUserEventInstanceExceptionOccurrenceExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty](Remove-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty](Remove-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserEventInstanceExtension](Remove-MgBetaUserEventInstanceExtension.md)
Delete navigation property extensions for users

### [Remove-MgBetaUserEventInstanceMultiValueExtendedProperty](Remove-MgBetaUserEventInstanceMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserEventInstanceSingleValueExtendedProperty](Remove-MgBetaUserEventInstanceSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Remove-MgBetaUserEventMultiValueExtendedProperty](Remove-MgBetaUserEventMultiValueExtendedProperty.md)
Delete navigation property multiValueExtendedProperties for users

### [Remove-MgBetaUserEventSingleValueExtendedProperty](Remove-MgBetaUserEventSingleValueExtendedProperty.md)
Delete navigation property singleValueExtendedProperties for users

### [Update-MgBetaGroupCalendarMultiValueExtendedProperty](Update-MgBetaGroupCalendarMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgBetaGroupCalendarPermission](Update-MgBetaGroupCalendarPermission.md)
Update the navigation property calendarPermissions in groups

### [Update-MgBetaGroupCalendarSingleValueExtendedProperty](Update-MgBetaGroupCalendarSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgBetaGroupEvent](Update-MgBetaGroupEvent.md)
Update the navigation property events in groups

### [Update-MgBetaGroupEventExceptionOccurrenceExtension](Update-MgBetaGroupEventExceptionOccurrenceExtension.md)
Update the navigation property extensions in groups

### [Update-MgBetaGroupEventExceptionOccurrenceInstanceExtension](Update-MgBetaGroupEventExceptionOccurrenceInstanceExtension.md)
Update the navigation property extensions in groups

### [Update-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty](Update-MgBetaGroupEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty](Update-MgBetaGroupEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty](Update-MgBetaGroupEventExceptionOccurrenceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty](Update-MgBetaGroupEventExceptionOccurrenceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgBetaGroupEventExtension](Update-MgBetaGroupEventExtension.md)
Update the navigation property extensions in groups

### [Update-MgBetaGroupEventInstanceExceptionOccurrenceExtension](Update-MgBetaGroupEventInstanceExceptionOccurrenceExtension.md)
Update the navigation property extensions in groups

### [Update-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty](Update-MgBetaGroupEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty](Update-MgBetaGroupEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgBetaGroupEventInstanceExtension](Update-MgBetaGroupEventInstanceExtension.md)
Update the navigation property extensions in groups

### [Update-MgBetaGroupEventInstanceMultiValueExtendedProperty](Update-MgBetaGroupEventInstanceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgBetaGroupEventInstanceSingleValueExtendedProperty](Update-MgBetaGroupEventInstanceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgBetaGroupEventMultiValueExtendedProperty](Update-MgBetaGroupEventMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in groups

### [Update-MgBetaGroupEventSingleValueExtendedProperty](Update-MgBetaGroupEventSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in groups

### [Update-MgBetaPlace](Update-MgBetaPlace.md)
Update the properties of place object, which can be a room, workspace, or roomList.
You can identify the **room**, **workspace**, or **roomList** by specifying the **id** or **emailAddress** property.

### [Update-MgBetaUserCalendar](Update-MgBetaUserCalendar.md)
Update the navigation property calendars in users

### [Update-MgBetaUserCalendarGroup](Update-MgBetaUserCalendarGroup.md)
Update the navigation property calendarGroups in users

### [Update-MgBetaUserCalendarMultiValueExtendedProperty](Update-MgBetaUserCalendarMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserCalendarPermission](Update-MgBetaUserCalendarPermission.md)
Update the navigation property calendarPermissions in users

### [Update-MgBetaUserCalendarSingleValueExtendedProperty](Update-MgBetaUserCalendarSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserEvent](Update-MgBetaUserEvent.md)
Update the navigation property events in users

### [Update-MgBetaUserEventExceptionOccurrenceExtension](Update-MgBetaUserEventExceptionOccurrenceExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserEventExceptionOccurrenceInstanceExtension](Update-MgBetaUserEventExceptionOccurrenceInstanceExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty](Update-MgBetaUserEventExceptionOccurrenceInstanceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty](Update-MgBetaUserEventExceptionOccurrenceInstanceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty](Update-MgBetaUserEventExceptionOccurrenceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty](Update-MgBetaUserEventExceptionOccurrenceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserEventExtension](Update-MgBetaUserEventExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserEventInstanceExceptionOccurrenceExtension](Update-MgBetaUserEventInstanceExceptionOccurrenceExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty](Update-MgBetaUserEventInstanceExceptionOccurrenceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty](Update-MgBetaUserEventInstanceExceptionOccurrenceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserEventInstanceExtension](Update-MgBetaUserEventInstanceExtension.md)
Update the navigation property extensions in users

### [Update-MgBetaUserEventInstanceMultiValueExtendedProperty](Update-MgBetaUserEventInstanceMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserEventInstanceSingleValueExtendedProperty](Update-MgBetaUserEventInstanceSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

### [Update-MgBetaUserEventMultiValueExtendedProperty](Update-MgBetaUserEventMultiValueExtendedProperty.md)
Update the navigation property multiValueExtendedProperties in users

### [Update-MgBetaUserEventSingleValueExtendedProperty](Update-MgBetaUserEventSingleValueExtendedProperty.md)
Update the navigation property singleValueExtendedProperties in users

